Changes with melon 1.3.3                                          05 Nov 2015
    *) Fixed some bugs of parsing HTTP protocol.

Changes with melon 1.3.2                                          22 Oct 2015
    *) Added one interface for the communication
       between master process and worker process.
    *) Added some interfaces for getting socket
       file descriptor of tcp connection.
    *) Added some interfaces for testing whether the
       chains are empty.
    *) Added a boot parameter for stop melon service.

Changes with melon 1.3.1                                          20 Oct 2015
    *) Fixed a bug of event component.
    *) Added a configuration command for log path.
    *) Added a boot parameter for reload configuration.

Changes with melon 1.3.0                                          17 Sep 2015
    *) Added a log level (Warn).
    *) Added two configuration command (max_nofile and
       core_file_size).
    *) Added an new interface in mln_hash.c for changing value
       (mln_hash_change_value()).
    *) Added HTTP components.

Changes with melon 1.2.8                                          14 Sep 2015
    *) Added a memory pool.
    *) Added a change structure.
    *) Added a buffer structure.
    *) Added another implementation of tcp I/O.
    *) Added some interfaces of string.
    *) Added an implementation of file cache.

Changes with melon 1.2.7                                          29 Jul 2015
    *) Fixed some bugs about lock.

Changes with melon 1.2.6                                          27 Jul 2015
    *) Fixed some bugs of salloc.

Changes with melon 1.2.5                                          20 Jul 2015
    *) Optimized the initialization of boot parameters.

    *) Optimized the initialization of log and daemon.

    *) Fixed Makefile not to overwrite configuration file.

    *) Deleted the shell script code which created user 'melon'.

    *) Added configuration item for changing user.
