@@ -1024,11 +1024,16 @@ Their definitions can be found in melon-1.3.3/include/mln_types.h.
                                          int type);
         Remove and return the chain that 'type' indicates in 'tc'.
 
-     s) mln_tcp_conn_send(mln_tcp_conn_t *tc);
+     s) mln_chain_t *mln_tcp_conn_get_last(mln_tcp_conn_t *tc,
+                                           int type);
+        Get the last chain node from the chain that is indicated
+        by 'type' from 'tc'.
+
+     t) mln_tcp_conn_send(mln_tcp_conn_t *tc);
         Send the data of 'send' chain in 'tc' to the peer of a
         connection.
 
-     t) mln_tcp_conn_recv(mln_tcp_conn_t *tc, mln_u32_t flag);
+     u) mln_tcp_conn_recv(mln_tcp_conn_t *tc, mln_u32_t flag);
         Receive the data from the peer of a connection and add
         the data to the end of 'receive' chain in 'tc'.
         'flag' indicates the storage method for the receive data.
@@ -1039,17 +1044,17 @@ Their definitions can be found in melon-1.3.3/include/mln_types.h.
             III. M_C_TYPE_FILE
                  Store the receive data in a temporary file.
 
-     u) mln_tcp_conn_get_fd(pconn);
+     v) mln_tcp_conn_get_fd(pconn);
         Return the socket file descriptor of 'pconn' (its type is
         mln_tcp_conn_t).
 
-     v) mln_tcp_conn_send_empty(pconn);
+     w) mln_tcp_conn_send_empty(pconn);
         Test whether the 'send' chain is empty or not.
 
-     w) mln_tcp_conn_recv_empty(pconn);
+     x) mln_tcp_conn_recv_empty(pconn);
         Test whether the 'receive' chain is empty or not.
 
-     x) mln_tcp_conn_sent_empty(pconn);
+     y) mln_tcp_conn_sent_empty(pconn);
         Test whether the 'sent' chain is empty or not.
 
   13) Global resources Initialization
