@@ -1,5 +1,7 @@
-Changes with melon 1.3.3                                          05 Nov 2015
+Changes with melon 1.3.3                                          06 Nov 2015
     *) Fixed some bugs of parsing HTTP protocol.
+    *) Added an interface for HTTP protocol.
+    *) Added an interface for TCP connection.
 
 Changes with melon 1.3.2                                          22 Oct 2015
     *) Added one interface for the communication
